--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,10 +37,16 @@ jobs:
             echo "🛑 Stopping and removing any old test resources..."
             docker compose -f docker-compose.test.yml down --volumes || true
 
-            # --- FIX: Forcefully remove old session data to prevent permission errors ---
-            # We use sudo because the directory is owned by the root user.
-            echo "🔑 Clearing old session data on host to ensure a clean build context..."
-            sudo rm -rf wwebjs_auth_test
+            # --- FIX: Removed 'sudo' as it's no longer needed ---
+            echo "🔑 Clearing old session data as the host user..."
+            rm -rf wwebjs_auth_test
+
+            # --- FIX: Export the host user's ID and Group ID ---
+            # This makes the UID and GID available to the docker-compose file.
+            export UID=$(id -u)
+            export GID=$(id -g)
+            echo "ℹ️ Running container as user UID=${UID}, GID=${GID}"
 
             echo "🚀 Building and running the test. Logs will stream below:"
             docker compose -f docker-compose.test.yml up --build
+            echo "✅ Test completed. Cleaning up..."
