--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,16 +37,13 @@ jobs:
             echo "🛑 Stopping and removing any old test resources..."
             docker compose -f docker-compose.test.yml down --volumes || true
 
-            # --- FIX: Removed 'sudo' as it's no longer needed ---
             echo "🔑 Clearing old session data as the host user..."
             rm -rf wwebjs_auth_test
 
-            # --- FIX: Export the host user's ID and Group ID ---
-            # This makes the UID and GID available to the docker-compose file.
-            export UID=$(id -u)
-            export GID=$(id -g)
-            echo "ℹ️ Running container as user UID=${UID}, GID=${GID}"
+            # --- FIX: Use non-reserved variable names ---
+            export HOST_UID=$(id -u)
+            export HOST_GID=$(id -g)
+            echo "ℹ️ Running container as user HOST_UID=${HOST_UID}, HOST_GID=${HOST_GID}"
 
             echo "🚀 Building and running the test. Logs will stream below:"
             docker compose -f docker-compose.test.yml up --build
-            echo "✅ Test completed. Cleaning up..."
